--- a/assets/deveb-s1n0/_sifirlama.scss
+++ b/assets/deveb-s1n0/_sifirlama.scss
@@ -32,6 +32,9 @@
     a, button, input, textarea{
       outline: 0; }
 
+    a{
+      text-decoration: none;
+    }
 
     /*  Başlık ayarları */
     h1, h2, h3, h4, h5, h6{
