--- a/assets/deveb-s1n0/_dil-tr.scss
+++ b/assets/deveb-s1n0/_dil-tr.scss
@@ -55,6 +55,18 @@ $metin-sağda: metin-sağda;
 $metin-ortada: metin-ortada;
 $metin-solda: metin-solda;
 
+$sol: l;
+$sağ: s;
+$üst: t;
+$alt: a;
+$solüst: lt;
+$üstsağ: ts;
+$altsağ: as;
+$solalt: la;
+$orta: o;
+$üstalt: ta;
+$solsağ: ls;
+
 /* Durumlama - Kap Örgüsü */
 $gizle: gizle;
 $bunu-gizle: bunu-gizle;
