--- a/_includes/s1n0/dallik.html
+++ b/_includes/s1n0/dallik.html
@@ -27,6 +27,9 @@
         <li class="{% if page.url contains '/1.0/tr/kap-orgusu/genlesme-duzeni' %}etkin{% endif %}">
           <a href="/1.0/tr/kap-orgusu/genlesme-duzeni">Genleşme Düzeni</a>
         </li>
+        <li class="{% if page.url contains '/1.0/tr/kap-orgusu/aralik-duzeni' %}etkin{% endif %}">
+          <a href="/1.0/tr/kap-orgusu/aralik-duzeni">Aralık Düzeni</a>
+        </li>
         <li class="{% if page.url contains '/1.0/tr/kap-orgusu/bicim-duzeni' %}etkin{% endif %}">
           <a href="/1.0/tr/kap-orgusu/bicim-duzeni">Biçim Düzeni</a>
         </li>
