--- a/_includes/s1n0/dallik.html
+++ b/_includes/s1n0/dallik.html
@@ -1,58 +1,95 @@
+
+{% if page.url contains '/1.0/tr/' %}
+  
+    {% assign dil = 'tr' %}
+    {% assign baslangic = 'Başlangıç' %}
+    {% assign kurulum = 'Kurulum' %}
+    {% assign ekran_orgusu = 'Ekran Örgüsü' %}
+    {% assign kap_orgusu = 'Kap Örgüsü' %}
+    {% assign parca_duzeni = 'Parça Düzeni' %}
+    {% assign dizem_duzeni = 'Dizem Düzeni' %}
+    {% assign genlesme_duzeni = 'Genleşme Düzeni' %}
+    {% assign aralik_duzeni = 'Aralık Düzeni' %}
+    {% assign bicim_duzeni = 'Biçim Düzeni' %}
+    {% assign konumlama = 'Konumlama' %}
+    {% assign siralama = 'Sıralama' %}
+    {% assign olcekler = 'Ölçekler' %}
+
+{% endif %}
+{% if page.url contains '/1.0/en/' %}
+  
+    {% assign dil = 'en' %}
+    {% assign baslangic = 'Start' %}
+    {% assign kurulum = 'Install' %}
+    {% assign ekran_orgusu = 'Screen System' %}
+    {% assign kap_orgusu = 'Grid System' %}
+    {% assign parca_duzeni = 'Piece System' %}
+    {% assign dizem_duzeni = 'Rytm System' %}
+    {% assign genlesme_duzeni = 'Grow System' %}
+    {% assign aralik_duzeni = 'Space System' %}
+    {% assign bicim_duzeni = 'Type System' %}
+    {% assign konumlama = 'Positioning' %}
+    {% assign siralama = 'Order' %}
+    {% assign olcekler = 'Scales' %}
+
+{% endif %}
+
+
 <nav>
   <input id="menü-ana" type="radio" name="ana-menü" data-kapaç="çaprazlama gizle">
   <label for="menü-ana">•••</label>
   <label for="menü-ana-çapraz">///</label>
   <ul class="imge" data-menü="görünür dikey">
-    <li class="{% if page.url == '/1.0/tr/' %}etkin{% endif %}">
-      <a href="/1.0/tr/">Başlangıç</a>
+    <li class="{% if page.url == '/1.0/tr/' or page.url == '/1.0/en/' %}etkin{% endif %}">
+      <a href="/1.0{% if page.url contains '/tr/' %}/tr/{% endif %}{% if page.url contains '/en/' %}/en/{% endif %}">{{ baslangic }}</a>
     </li>
-    <li class="{% if page.url contains '/1.0/tr/kurulum' %}etkin{% endif %}">
-      <a href="/1.0/tr/kurulum">Kurulum</a>
+    <li class="{% if page.url contains '/kurulum' %}etkin{% endif %}">
+      <a href="/1.0/{{ dil }}/kurulum">{{ kurulum }}</a>
     </li>
-    <li class="{% if page.url contains '/1.0/tr/ekran-orgusu' %}etkin{% endif %}">
-      <a href="/1.0/tr/ekran-orgusu">Ekran Örgüsü</a>
+    <li class="{% if page.url contains '/ekran-orgusu' %}etkin{% endif %}">
+      <a href="/1.0/{{ dil }}/ekran-orgusu">{{ ekran_orgusu }}</a>
     </li>
-    <li class="{% if page.url contains '/1.0/tr/kap-orgusu' %}etkin{% endif %}">
-      <a href="/1.0/tr/kap-orgusu">Kap Örgüsü</a>
-      <input id="kap-örgüsü" type="checkbox" {% if page.url contains '/1.0/tr/kap-orgusu' or page.url contains '/1.0/tr/kap-orgusu/' or page.url contains '/1.0/tr/ornekler/' %}checked{% endif %} data-kapaç="sağda">
+    <li class="{% if page.url contains '/kap-orgusu' %}etkin{% endif %}">
+      <a href="/1.0/{{ dil }}/kap-orgusu">{{ kap_orgusu }}</a>
+      <input id="kap-örgüsü" type="checkbox" {% if page.url contains '/kap-orgusu' or page.url contains '/ornekler/' %}checked{% endif %} data-kapaç="sağda">
       <label for="kap-örgüsü"><span>▽</span></label>
       <label for="kap-örgüsü"><span>▼</span></label>
       <ul>
-        <li class="{% if page.url contains '/1.0/tr/kap-orgusu/parca-duzeni' %}etkin{% endif %}">
-          <a href="/1.0/tr/kap-orgusu/parca-duzeni">Parça Düzeni</a>
+        <li class="{% if page.url contains '/kap-orgusu/parca-duzeni' %}etkin{% endif %}">
+          <a href="/1.0/{{ dil }}/kap-orgusu/parca-duzeni">{{ parca_duzeni }}</a>
         </li>
-        <li class="{% if page.url contains '/1.0/tr/kap-orgusu/dizem-duzeni' %}etkin{% endif %}">
-          <a href="/1.0/tr/kap-orgusu/dizem-duzeni">Dizem Düzeni</a>
+        <li class="{% if page.url contains '/kap-orgusu/dizem-duzeni' %}etkin{% endif %}">
+          <a href="/1.0/{{ dil }}/kap-orgusu/dizem-duzeni">{{ dizem_duzeni }}</a>
         </li>
-        <li class="{% if page.url contains '/1.0/tr/kap-orgusu/genlesme-duzeni' %}etkin{% endif %}">
-          <a href="/1.0/tr/kap-orgusu/genlesme-duzeni">Genleşme Düzeni</a>
+        <li class="{% if page.url contains '/kap-orgusu/genlesme-duzeni' %}etkin{% endif %}">
+          <a href="/1.0/{{ dil }}/kap-orgusu/genlesme-duzeni">{{ genlesme_duzeni }}</a>
         </li>
-        <li class="{% if page.url contains '/1.0/tr/kap-orgusu/aralik-duzeni' %}etkin{% endif %}">
-          <a href="/1.0/tr/kap-orgusu/aralik-duzeni">Aralık Düzeni</a>
+        <li class="{% if page.url contains '/kap-orgusu/aralik-duzeni' %}etkin{% endif %}">
+          <a href="/1.0/{{ dil }}/kap-orgusu/aralik-duzeni">{{ aralik_duzeni }}</a>
         </li>
-        <li class="{% if page.url contains '/1.0/tr/kap-orgusu/bicim-duzeni' %}etkin{% endif %}">
-          <a href="/1.0/tr/kap-orgusu/bicim-duzeni">Biçim Düzeni</a>
+        <li class="{% if page.url contains '/kap-orgusu/bicim-duzeni' %}etkin{% endif %}">
+          <a href="/1.0/{{ dil }}/kap-orgusu/bicim-duzeni">{{ bicim_duzeni }}</a>
         </li>
-        <li class="{% if page.url contains '/1.0/tr/kap-orgusu/konumlama' %}etkin{% endif %}">
-          <a href="/1.0/tr/kap-orgusu/konumlama">Konumlama</a>
+        <li class="{% if page.url contains '/kap-orgusu/konumlama' %}etkin{% endif %}">
+          <a href="/1.0/{{ dil }}/kap-orgusu/konumlama">{{ konumlama }}</a>
         </li>
-        <li class="{% if page.url contains '/1.0/tr/kap-orgusu/siralama' %}etkin{% endif %}">
-          <a href="/1.0/tr/kap-orgusu/siralama">Sıralama</a>
+        <li class="{% if page.url contains '/kap-orgusu/siralama' %}etkin{% endif %}">
+          <a href="/1.0/{{ dil }}/kap-orgusu/siralama">{{ siralama }}</a>
         </li>
-        <li class="{% if page.url contains '/1.0/tr/kap-orgusu/olcekler' %}etkin{% endif %}">
-          <a href="/1.0/tr/kap-orgusu/olcekler">Ölçekler</a>
+        <li class="{% if page.url contains '/kap-orgusu/olcekler' %}etkin{% endif %}">
+          <a href="/1.0/{{ dil }}/kap-orgusu/olcekler">{{ olcekler }}</a>
         </li>
         <!--
         <li>
-          <input id="kap-örgüsü-örnekler" type="checkbox" {% if page.url contains '/1.0/tr/ornekler/' %}checked{% endif %} data-kapaç="sağda">
+          <input id="kap-örgüsü-örnekler" type="checkbox" {% if page.url contains '/ornekler/' %}checked{% endif %} data-kapaç="sağda">
           <label for="kap-örgüsü-örnekler"><a href="#">Örnekler</a><span>▽</span></label>
           <label for="kap-örgüsü-örnekler"><a href="#">Örnekler</a><span>▼</span></label>
           <ul>
-            <li class="{% if page.url contains '/1.0/tr/ornekler/kap-orgusu-esit-bolme' %}etkin{% endif %}">
-              <a href="/1.0/tr/ornekler/kap-orgusu-esit-bolme">Eşit Bölme #1</a>
+            <li class="{% if page.url contains '/ornekler/kap-orgusu-esit-bolme' %}etkin{% endif %}">
+              <a href="/1.0/{{ dil }}/ornekler/kap-orgusu-esit-bolme">Eşit Bölme #1</a>
             </li>
-            <li class="{% if page.url contains '/1.0/tr/ornekler/kap-orgusu-esit-bolme-2' %}etkin{% endif %}">
-              <a href="/1.0/tr/ornekler/kap-orgusu-esit-bolme-2">Eşit Bölme #2</a>
+            <li class="{% if page.url contains '/ornekler/kap-orgusu-esit-bolme-2' %}etkin{% endif %}">
+              <a href="/1.0/{{ dil }}/ornekler/kap-orgusu-esit-bolme-2">Eşit Bölme #2</a>
             </li>
           </ul>
         </li>
@@ -60,20 +97,20 @@
       </ul>
     </li>
     <!--
-    <li class="{% if page.url contains '/1.0/tr/sekme-orgusu' %}etkin{% endif %}">
-      <a href="/1.0/tr/sekme-orgusu">Sekme Örgüsü</a>
+    <li class="{% if page.url contains '/sekme-orgusu' %}etkin{% endif %}">
+      <a href="/1.0/{{ dil }}/sekme-orgusu">Sekme Örgüsü</a>
     </li>
-    <li class="{% if page.url contains '/1.0/tr/renk-orgusu' %}etkin{% endif %}">
-      <a href="/1.0/tr/renk-orgusu">Renk Örgüsü</a>
+    <li class="{% if page.url contains '/renk-orgusu' %}etkin{% endif %}">
+      <a href="/1.0/{{ dil }}/renk-orgusu">Renk Örgüsü</a>
     </li>
-    <li class="{% if page.url contains '/1.0/tr/terimler' %}etkin{% endif %}">
-      <a href="/1.0/tr/terimler">Terimler</a>
+    <li class="{% if page.url contains '/terimler' %}etkin{% endif %}">
+      <a href="/1.0/{{ dil }}/terimler">Terimler</a>
     </li>
-    <li class="{% if page.url contains '/1.0/tr/takim' %}etkin{% endif %}">
-      <a href="/1.0/tr/takim">Takım</a>
+    <li class="{% if page.url contains '/takim' %}etkin{% endif %}">
+      <a href="/1.0/{{ dil }}/takim">Takım</a>
     </li>
-    <li class="{% if page.url contains '/1.0/tr/tarayici-destegi' %}etkin{% endif %}">
-      <a href="/1.0/tr/tarayici-destegi">Tarayıcı Desteği</a>
+    <li class="{% if page.url contains '/tarayici-destegi' %}etkin{% endif %}">
+      <a href="/1.0/{{ dil }}/tarayici-destegi">Tarayıcı Desteği</a>
     </li>-->
   </ul>
 </nav>
